Fix glitchy overlap in media item list view checkbox

--- a/app/assets/stylesheets/forest/partials/_media_item_thumbnail.scss
+++ b/app/assets/stylesheets/forest/partials/_media_item_thumbnail.scss
@@ -150,3 +150,8 @@
   background-size: cover;
   background-position: center center;
 }
+
+.media-library__list__checkbox-td {
+  position: relative;
+  z-index: 1;
+}
